# market_analyzer

./: .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  package-lock.json  package.json  roadmap.md
database/: create_tables.sql
frontend/: .gitignore  package-lock.json  package.json  rollup.config.js
frontend/public/: index.html
frontend/src/: App.svelte  GammaExposure.svelte
frontend/src/common/: constants.js  utils.js
frontend/src/common/apis/: internal.js  td.js
frontend/src/components/: Auth.svelte  ChartRow.svelte  Charts.svelte  Dashboard.svelte  GammaExposure.svelte  GammaExposureAggregate.svelte  GammaExposureChart.svelte  GammaMap.svelte  GammaPrice.svelte
frontend/src/components/charts/: GammaMapChart.svelte
src/: App.svelte  analysis.rs  data_apis.rs  db.rs  gamma_exposure.rs  graphql.rs  main.rs  math.rs  td.rs  types.rs  utils.rs
src/analysis/: gamma_exposure.rs  option_stats.rs
src/common/: td.js
src/common/apis/: tradier.js
src/common/math/: bs.js  gammaExposure.js  stats.js
src/components/: Auth.svelte  Charts.svelte  GammaExposure.svelte  GammaExposureChart.svelte  GammaPrice.svelte  GammaPriceChart.svelte
src/data_apis/: tda.rs  tradier.rs
src/data_apis/td/: options.rs
src/data_apis/tda/: get_ohlc.rs  get_option_chain.rs  get_quote.rs
src/data_apis/tradier/: get_clock.rs  get_option_chain.rs  get_option_expirations.rs  get_quote.rs  get_time_and_sales.rs
src/db/: file.rs  postgres.rs  types.rs
src/graphql/: ohlc.rs  quote.rs
src/math/: bs.rs
src/td/: options.rs
src/types/: clock.rs  gex.rs  ohlc.rs  options.rs  quote.rs  stats.rs
