[package]
name = "market_analyzer"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.1"
chrono = "0.4"
dotenv = "0.15"
hyper = { version = "0.14", featutes = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
statrs = "0.15"
tokio = { version = "1.6", features = ["full"] }
